optimizer/src/snapshots/spec_example_jsx_import_source.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

/* @jsxImportSource react */

import { qwikify$ } from './qwikfy';

export const App = () => (
	<div onClick$={()=>console.log('App')}></div>
);

export const App2 = qwikify$(() => (
	<div onClick$={()=>console.log('App2')}></div>
));

============================= test.tsx_App2_qwikify_RKJW7oCMdS4.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_pKZvxGMv2z8 = ()=>import("./test.tsx_App2_qwikify_div_on_click_pKZvxGMv2z8");
export const App2_qwikify_RKJW7oCMdS4 = ()=>/*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ qrl(i_pKZvxGMv2z8, "App2_qwikify_div_on_click_pKZvxGMv2z8") }, null, null, 3, null);


None
/*
{
  "origin": "test.tsx",
  "name": "App2_qwikify_RKJW7oCMdS4",
  "entry": null,
  "displayName": "test.tsx_App2_qwikify",
  "hash": "RKJW7oCMdS4",
  "canonicalFilename": "test.tsx_App2_qwikify_RKJW7oCMdS4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "qwikify$",
  "captures": false,
  "loc": [
    175,
    232
  ]
}
*/
============================= test.tsx_App2_qwikify_div_on_click_pKZvxGMv2z8.js (ENTRY POINT)==

export const App2_qwikify_div_on_click_pKZvxGMv2z8 = ()=>console.log("App2");


None
/*
{
  "origin": "test.tsx",
  "name": "App2_qwikify_div_on_click_pKZvxGMv2z8",
  "entry": null,
  "displayName": "test.tsx_App2_qwikify_div_on_click",
  "hash": "pKZvxGMv2z8",
  "canonicalFilename": "test.tsx_App2_qwikify_div_on_click_pKZvxGMv2z8",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_App_div_on_click_hfAe5xlODKc.js (ENTRY POINT)==

export const App_div_on_click_hfAe5xlODKc = ()=>console.log("App");


None
/*
{
  "origin": "test.tsx",
  "name": "App_div_on_click_hfAe5xlODKc",
  "entry": null,
  "displayName": "test.tsx_App_div_on_click",
  "hash": "hfAe5xlODKc",
  "canonicalFilename": "test.tsx_App_div_on_click_hfAe5xlODKc",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.js ==

import { qwikifyQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qwikifyQrl } from "./qwikfy";
const i_hfAe5xlODKc = ()=>import("./test.tsx_App_div_on_click_hfAe5xlODKc");
const i_RKJW7oCMdS4 = ()=>import("./test.tsx_App2_qwikify_RKJW7oCMdS4");
export const App = ()=>/*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ qrl(i_hfAe5xlODKc, "App_div_on_click_hfAe5xlODKc") }, null, null, 3, null);
export const App2 = /*#__PURE__*/ qwikifyQrl(/*#__PURE__*/ qrl(i_RKJW7oCMdS4, "App2_qwikify_RKJW7oCMdS4"));


None
== DIAGNOSTICS ==

[]
