optimizer/src/snapshots/spec_example_jsx_listeners.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';

export const Foo = component$(() => {

	return $(() => {
		const handler = $(() => console.log('reused'));
		return (
			<div
				onClick$={()=>console.log('onClick$')}
				onDocumentScroll$={()=>console.log('onDocumentScroll')}
				onDocumentScroll$={()=>console.log('onWindowScroll')}

				on-cLick$={()=>console.log('on-cLick$')}
				onDocument-sCroll$={()=>console.log('onDocument-sCroll')}
				onDocument-scroLL$={()=>console.log('onDocument-scroLL')}

				host:onClick$={()=>console.log('host:onClick$')}
				host:onDocumentScroll$={()=>console.log('host:onDocument:scroll')}
				host:onDocumentScroll$={()=>console.log('host:onWindow:scroll')}

				onKeyup$={handler}
				onDocument:keyup$={handler}
				onWindow:keyup$={handler}

				custom$={()=>console.log('custom')}
			/>
		)
	});
}, {
	tagName: "my-foo",
});

============================= test.tsx_Foo_component_div_on_document_scroll_fwZMoLBKowg.js (ENTRY POINT)==

export const Foo_component_div_on_document_scroll_fwZMoLBKowg = ()=>console.log("onDocumentScroll");


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_on_document_scroll_fwZMoLBKowg",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_on_document_scroll",
  "hash": "fwZMoLBKowg",
  "canonicalFilename": "test.tsx_Foo_component_div_on_document_scroll_fwZMoLBKowg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onDocumentScroll$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_div_on_document_scroll_3_IwZE9kg7cxg.js (ENTRY POINT)==

export const Foo_component_div_on_document_scroll_3_IwZE9kg7cxg = ()=>console.log("host:onWindow:scroll");


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_on_document_scroll_3_IwZE9kg7cxg",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_on_document_scroll_3",
  "hash": "IwZE9kg7cxg",
  "canonicalFilename": "test.tsx_Foo_component_div_on_document_scroll_3_IwZE9kg7cxg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "host:onDocumentScroll$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
const i_H10xZtD0e7w = ()=>import("./test.tsx_Foo_component_handler_H10xZtD0e7w");
export const Foo_component_HTDRsvUbLiE = ()=>{
	return /*#__PURE__*/ qrl(i_DvU6FitWglY, "Foo_component_1_DvU6FitWglY");
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    79,
    843
  ]
}
*/
============================= test.tsx_Foo_component_div_on_document_s_croll_K5PyFHBpgyw.js (ENTRY POINT)==

export const Foo_component_div_on_document_s_croll_K5PyFHBpgyw = ()=>console.log("onDocument-sCroll");


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_on_document_s_croll_K5PyFHBpgyw",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_on_document_s_croll",
  "hash": "K5PyFHBpgyw",
  "canonicalFilename": "test.tsx_Foo_component_div_on_document_s_croll_K5PyFHBpgyw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onDocument-sCroll$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_1_DvU6FitWglY.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_pyHnxab17ms = ()=>import("./test.tsx_Foo_component_div_custom_pyHnxab17ms");
const i_IwZE9kg7cxg = ()=>import("./test.tsx_Foo_component_div_on_document_scroll_3_IwZE9kg7cxg");
const i_1Yru37AeyJw = ()=>import("./test.tsx_Foo_component_div_on_document_scroll_2_1Yru37AeyJw");
const i_X5007uw3Vro = ()=>import("./test.tsx_Foo_component_div_on_click_1_X5007uw3Vro");
const i_3Kywe6Jhkak = ()=>import("./test.tsx_Foo_component_div_on_document_scro_l_l_3Kywe6Jhkak");
const i_K5PyFHBpgyw = ()=>import("./test.tsx_Foo_component_div_on_document_s_croll_K5PyFHBpgyw");
const i_IoAsJW8vYJc = ()=>import("./test.tsx_Foo_component_div_on_cLick_IoAsJW8vYJc");
const i_LbGkYYNVyVw = ()=>import("./test.tsx_Foo_component_div_on_document_scroll_1_LbGkYYNVyVw");
const i_fwZMoLBKowg = ()=>import("./test.tsx_Foo_component_div_on_document_scroll_fwZMoLBKowg");
const i_IoDmt25HkZg = ()=>import("./test.tsx_Foo_component_div_on_click_IoDmt25HkZg");
const i_H10xZtD0e7w = ()=>import("./test.tsx_Foo_component_handler_H10xZtD0e7w");
export const Foo_component_1_DvU6FitWglY = ()=>{
	const handler = /*#__PURE__*/ qrl(i_H10xZtD0e7w, "Foo_component_handler_H10xZtD0e7w");
	return /*#__PURE__*/ _jsxSorted("div", {
		custom$: /*#__PURE__*/ qrl(i_pyHnxab17ms, "Foo_component_div_custom_pyHnxab17ms"),
		"host:onClick$": /*#__PURE__*/ qrl(i_X5007uw3Vro, "Foo_component_div_on_click_1_X5007uw3Vro"),
		"host:onDocumentScroll$": /*#__PURE__*/ qrl(i_1Yru37AeyJw, "Foo_component_div_on_document_scroll_2_1Yru37AeyJw"),
		"host:onDocumentScroll$": /*#__PURE__*/ qrl(i_IwZE9kg7cxg, "Foo_component_div_on_document_scroll_3_IwZE9kg7cxg"),
		"on:c-lick": /*#__PURE__*/ qrl(i_IoAsJW8vYJc, "Foo_component_div_on_cLick_IoAsJW8vYJc"),
		"on:click": /*#__PURE__*/ qrl(i_IoDmt25HkZg, "Foo_component_div_on_click_IoDmt25HkZg"),
		"on:document-scroll": /*#__PURE__*/ qrl(i_K5PyFHBpgyw, "Foo_component_div_on_document_s_croll_K5PyFHBpgyw"),
		"on:document-scroll": /*#__PURE__*/ qrl(i_3Kywe6Jhkak, "Foo_component_div_on_document_scro_l_l_3Kywe6Jhkak"),
		"on:documentscroll": /*#__PURE__*/ qrl(i_fwZMoLBKowg, "Foo_component_div_on_document_scroll_fwZMoLBKowg"),
		"on:documentscroll": /*#__PURE__*/ qrl(i_LbGkYYNVyVw, "Foo_component_div_on_document_scroll_1_LbGkYYNVyVw")
	}, {
		"on:keyup": handler,
		"on:document:keyup": handler,
		"on:window:keyup": handler
	}, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_1_DvU6FitWglY",
  "entry": null,
  "displayName": "test.tsx_Foo_component_1",
  "hash": "DvU6FitWglY",
  "canonicalFilename": "test.tsx_Foo_component_1_DvU6FitWglY",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    98,
    839
  ]
}
*/
============================= test.tsx_Foo_component_div_on_document_scroll_1_LbGkYYNVyVw.js (ENTRY POINT)==

export const Foo_component_div_on_document_scroll_1_LbGkYYNVyVw = ()=>console.log("onWindowScroll");


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_on_document_scroll_1_LbGkYYNVyVw",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_on_document_scroll_1",
  "hash": "LbGkYYNVyVw",
  "canonicalFilename": "test.tsx_Foo_component_div_on_document_scroll_1_LbGkYYNVyVw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onDocumentScroll$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_div_custom_pyHnxab17ms.js (ENTRY POINT)==

export const Foo_component_div_custom_pyHnxab17ms = ()=>console.log("custom");


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_custom_pyHnxab17ms",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_custom",
  "hash": "pyHnxab17ms",
  "canonicalFilename": "test.tsx_Foo_component_div_custom_pyHnxab17ms",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "custom$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_div_on_cLick_IoAsJW8vYJc.js (ENTRY POINT)==

export const Foo_component_div_on_cLick_IoAsJW8vYJc = ()=>console.log("on-cLick$");


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_on_cLick_IoAsJW8vYJc",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_on_cLick",
  "hash": "IoAsJW8vYJc",
  "canonicalFilename": "test.tsx_Foo_component_div_on_cLick_IoAsJW8vYJc",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "on-cLick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_div_on_click_IoDmt25HkZg.js (ENTRY POINT)==

export const Foo_component_div_on_click_IoDmt25HkZg = ()=>console.log("onClick$");


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_on_click_IoDmt25HkZg",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_on_click",
  "hash": "IoDmt25HkZg",
  "canonicalFilename": "test.tsx_Foo_component_div_on_click_IoDmt25HkZg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_div_on_document_scroll_2_1Yru37AeyJw.js (ENTRY POINT)==

export const Foo_component_div_on_document_scroll_2_1Yru37AeyJw = ()=>console.log("host:onDocument:scroll");


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_on_document_scroll_2_1Yru37AeyJw",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_on_document_scroll_2",
  "hash": "1Yru37AeyJw",
  "canonicalFilename": "test.tsx_Foo_component_div_on_document_scroll_2_1Yru37AeyJw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "host:onDocumentScroll$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_div_on_document_scro_l_l_3Kywe6Jhkak.js (ENTRY POINT)==

export const Foo_component_div_on_document_scro_l_l_3Kywe6Jhkak = ()=>console.log("onDocument-scroLL");


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_on_document_scro_l_l_3Kywe6Jhkak",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_on_document_scro_l_l",
  "hash": "3Kywe6Jhkak",
  "canonicalFilename": "test.tsx_Foo_component_div_on_document_scro_l_l_3Kywe6Jhkak",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onDocument-scroLL$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_div_on_click_1_X5007uw3Vro.js (ENTRY POINT)==

export const Foo_component_div_on_click_1_X5007uw3Vro = ()=>console.log("host:onClick$");


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_on_click_1_X5007uw3Vro",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_on_click_1",
  "hash": "X5007uw3Vro",
  "canonicalFilename": "test.tsx_Foo_component_div_on_click_1_X5007uw3Vro",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "host:onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_handler_H10xZtD0e7w.js (ENTRY POINT)==

export const Foo_component_handler_H10xZtD0e7w = ()=>console.log("reused");


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_handler_H10xZtD0e7w",
  "entry": null,
  "displayName": "test.tsx_Foo_component_handler",
  "hash": "H10xZtD0e7w",
  "canonicalFilename": "test.tsx_Foo_component_handler_H10xZtD0e7w",
  "path": "",
  "extension": "js",
  "parent": "$1",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    126,
    153
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_DvU6FitWglY = ()=>import("./test.tsx_Foo_component_1_DvU6FitWglY");
const i_HTDRsvUbLiE = ()=>import("./test.tsx_Foo_component_HTDRsvUbLiE");
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_HTDRsvUbLiE, "Foo_component_HTDRsvUbLiE"));


None
== DIAGNOSTICS ==

[]
