optimizer/src/snapshots/spec_example_lightweight_functional.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';

export const Foo = component$((props) => {
	return (
		<div>
			<Button {...props} />
			<ButtonArrow {...props} />
		</div>
	);
}, {
	tagName: "my-foo",
});

export function Button({text, color}) {
	return (
		<button onColor$={color} onClick$={()=>console.log(text, color)}>{text}</button>
	);
}

export const ButtonArrow = ({text, color}) => {
	return (
		<button onColor$={color} onClick$={()=>console.log(text, color)}>{text}</button>
	);
}

============================= test.tsx_Foo_component_HTDRsvUbLiE.tsx (ENTRY POINT)==

export const Foo_component_HTDRsvUbLiE = (props)=>{
	return <div>
			<Button {...props} />
			<ButtonArrow {...props} />
		</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    79,
    179
  ]
}
*/
============================= test.tsx_ButtonArrow_button_onClick_9npo43fIGik.tsx (ENTRY POINT)==

export const ButtonArrow_button_onClick_9npo43fIGik = ()=>console.log(text, color);


None
/*
{
  "origin": "test.tsx",
  "name": "ButtonArrow_button_onClick_9npo43fIGik",
  "entry": null,
  "displayName": "test.tsx_ButtonArrow_button_onClick",
  "hash": "9npo43fIGik",
  "canonicalFilename": "test.tsx_ButtonArrow_button_onClick_9npo43fIGik",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Button_button_onClick_NsM0JYV00Jw.tsx (ENTRY POINT)==

export const Button_button_onClick_NsM0JYV00Jw = ()=>console.log(text, color);


None
/*
{
  "origin": "test.tsx",
  "name": "Button_button_onClick_NsM0JYV00Jw",
  "entry": null,
  "displayName": "test.tsx_Button_button_onClick",
  "hash": "NsM0JYV00Jw",
  "canonicalFilename": "test.tsx_Button_button_onClick_NsM0JYV00Jw",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx ==

import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_HTDRsvUbLiE = ()=>import("./test.tsx_Foo_component_HTDRsvUbLiE");
const i_NsM0JYV00Jw = ()=>import("./test.tsx_Button_button_onClick_NsM0JYV00Jw");
const i_9npo43fIGik = ()=>import("./test.tsx_ButtonArrow_button_onClick_9npo43fIGik");
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_HTDRsvUbLiE, "Foo_component_HTDRsvUbLiE"));
export function Button({ text, color }) {
	return <button on:color={color} on:click={/*#__PURE__*/ qrl(i_NsM0JYV00Jw, "Button_button_onClick_NsM0JYV00Jw")}>{text}</button>;
}
export const ButtonArrow = ({ text, color })=>{
	return <button on:color={color} on:click={/*#__PURE__*/ qrl(i_9npo43fIGik, "ButtonArrow_button_onClick_9npo43fIGik")}>{text}</button>;
};


None
== DIAGNOSTICS ==

[]
