optimizer/src/snapshots/spec_example_mutable_children.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore, Slot, Fragment } from '@qwik.dev/core';
import Image from './image.jpg?jsx';

export function Fn1(props: Stuff) {
	return (
		<>
			<div>{prop < 2 ? <p>1</p> : <Stuff>2</Stuff>}</div>
		</>
	);
}

export function Fn2(props: Stuff) {
	return (
		<div>{prop.value && <Stuff></Stuff>}<div></div></div>
	);
}

export function Fn3(props: Stuff) {
	if (prop.value) {
		return (
			<Stuff></Stuff>
		);
	}
	return (
		<div></div>
	);
}

export function Fn4(props: Stuff) {
	if (prop.value) {
		return (
			<div></div>
		);
	}
	return (
		<Stuff></Stuff>
	);
}

export const Arrow = (props: Stuff) => <div>{prop < 2 ? <p>1</p> : <Stuff>2</Stuff>}</div>;

export const AppDynamic1 = component$((props: Stuff) => {
	return (
		<>
			<div>{prop < 2 ? <p>1</p> : <Stuff>2</Stuff>}</div>
		</>
	);
});
export const AppDynamic2 = component$((props: Stuff) => {
	return (
		<div>{prop.value && <Stuff></Stuff>}<div></div></div>
	);
});

export const AppDynamic3 = component$((props: Stuff) => {
	if (prop.value) {
		return (
			<Stuff></Stuff>
		);
	}
	return (
		<div></div>
	);
});

export const AppDynamic4 = component$((props: Stuff) => {
	if (prop.value) {
		return (
			<div></div>
		);
	}
	return (
		<Stuff></Stuff>
	);
});

export const AppStatic = component$((props: Stuff) => {
	return (
		<>
			<div>Static {f ? 1 : 3}</div>
			<div>{prop < 2 ? <p>1</p> : <p>2</p>}</div>

			<div>{prop.value && <div></div>}</div>
			<div>{prop.value && <Fragment><Slot></Slot></Fragment>}</div>
			<div>{prop.value && <><div></div></>}</div>
			<div>{prop.value && <Image/>}</div>
			<div>Static {f ? 1 : 3}</div>
			<div>Static</div>
			<div>Static {props.value}</div>
			<div>Static {stuff()}</div>
			<div>Static {stuff()}</div>
		</>
	);
});

============================= test.js ==

import Image from "./image.jpg?jsx";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { componentQrl } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { Slot } from "@qwik.dev/core";
import { Fragment } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { Slot } from "@qwik.dev/core";
import { Fragment } from "@qwik.dev/core";
import Image from "./image.jpg?jsx";
export function Fn1(props) {
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, /*#__PURE__*/ _jsxSorted("div", null, null, prop < 2 ? /*#__PURE__*/ _jsxSorted("p", null, null, "1", 3, null) : _jsxSorted(Stuff, null, null, "2", 3, null), 1, null), 3, null);
}
export function Fn2(props) {
	return /*#__PURE__*/ _jsxSorted("div", null, null, [prop.value && _jsxSorted(Stuff, null, null, null, 3, null), /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null)], 1, null);
}
export function Fn3(props) {
	if (prop.value) {
		return _jsxSorted(Stuff, null, null, null, 3, null);
	}
	return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null);
}
export function Fn4(props) {
	if (prop.value) {
		return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null);
	}
	return _jsxSorted(Stuff, null, null, null, 3, null);
}
export const Arrow = (props)=>/*#__PURE__*/ _jsxSorted("div", null, null, prop < 2 ? /*#__PURE__*/ _jsxSorted("p", null, null, "1", 3, null) : _jsxSorted(Stuff, null, null, "2", 3, null), 1, null);
export const AppDynamic1 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, /*#__PURE__*/ _jsxSorted("div", null, null, prop < 2 ? /*#__PURE__*/ _jsxSorted("p", null, null, "1", 3, null) : _jsxSorted(Stuff, null, null, "2", 3, null), 1, null), 3, null);
}, "AppDynamic1_component_R00UJ05gbes"));
export const AppDynamic2 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
	return /*#__PURE__*/ _jsxSorted("div", null, null, [prop.value && _jsxSorted(Stuff, null, null, null, 3, null), /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null)], 1, null);
}, "AppDynamic2_component_3EY2zm0v00A"));
export const AppDynamic3 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
	if (prop.value) {
		return _jsxSorted(Stuff, null, null, null, 3, null);
	}
	return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null);
}, "AppDynamic3_component_FVq83NlbTDQ"));
export const AppDynamic4 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
	if (prop.value) {
		return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null);
	}
	return _jsxSorted(Stuff, null, null, null, 3, null);
}, "AppDynamic4_component_IO0yr8UvWEI"));
export const AppStatic = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
		/*#__PURE__*/ _jsxSorted("div", null, null, ["Static", f ? 1 : 3], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, prop < 2 ? /*#__PURE__*/ _jsxSorted("p", null, null, "1", 3, null) : /*#__PURE__*/ _jsxSorted("p", null, null, "2", 3, null), 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, prop.value && /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null), 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, prop.value && _jsxSorted(Fragment, null, null, _jsxSorted(Slot, null, null, null, 3, null), 3, null), 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, prop.value && /*#__PURE__*/ _jsxSorted(_Fragment, null, null, /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null), 3, null), 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, prop.value && _jsxSorted(Image, null, null, null, 3, null), 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["Static", f ? 1 : 3], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, "Static", 3, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["Static", _wrapProp(props)], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["Static", stuff()], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["Static", stuff()], 1, null)
	], 3, null);
}, "AppStatic_component_gYRXqF3G5nE"));


None
== DIAGNOSTICS ==

[]
